--- a/form_app/templates/result.html
+++ b/form_app/templates/result.html
@@ -9,14 +9,14 @@
     <form action="/" method="post">
         {% csrf_token %}
         <h1>Submitted Info</h1>
-        <h3>Your Name: {{name}}</h3>
+        <h3>Your Name: {{request.session.name}}</h3>
         
-        <h3>Dojo Location: {{location}}</h3>
+        <h3>Dojo Location: {{request.session.location}}</h3>
         
-        <h3>Favorite Language: {{language}}</h3>
+        <h3>Favorite Language: {{request.session.language}}</h3>
         
-        <h3>Comment: {{comment}}</h3>
-    
+        <h3>Comment: {{request.session.comment}}</h3>
+
         <button type="submit">Go Back</button>
     </form>
 
